<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<EditText
		android:id="@+id/keyword_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp"
		android:hint="@string/keyword"
		android:inputType="textCapWords" />
	<EditText
		android:id="@+id/prepareTime_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="80dp"
		android:hint="@string/prepareTime"
		android:inputType="textCapWords" />
	<EditText
		android:id="@+id/portions_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="140dp"
		android:hint="@string/portions"
		android:inputType="textCapWords" />
	<Spinner
		android:id="@+id/cookTypeSpinner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="200dp" />
	<Spinner
		android:id="@+id/prepareModeSpinner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="260dp" />
	<Spinner
		android:id="@+id/dietSpinner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="320dp" />
	<Spinner
		android:id="@+id/recipyCousineSpinner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="380dp" />
	<Spinner
		android:id="@+id/ocasionSpinner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="440dp" />
	<Button
		android:id="@+id/search"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="500dp"
		android:text="@string/search" />
</RelativeLayout>