<?xml version="1.0" encoding="UTF-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
		<EditText
			android:id="@+id/name_edit_text"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:hint="@string/type_your_name"
			android:inputType="textCapWords" />
		<EditText
			android:id="@+id/nick_edit_text"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="80dp"
			android:hint="@string/type_your_nick"
			android:inputType="textCapWords" />
		<Spinner
			android:id="@+id/dietSpinner"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="140dp" />
		<Spinner
			android:id="@+id/cookTypeSpinner"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="200dp" />
		<Spinner
			android:id="@+id/recipyCousineSpinner"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="260dp" />
		<Button
			android:id="@+id/add_name_button"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/name_edit_text"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="320dp"
			android:text="@string/save" />
	</RelativeLayout>
	<!-- The navigation drawer -->
	<ListView
		android:id="@+id/left_drawer"
		android:layout_width="240dp"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:background="#111"
		android:choiceMode="singleChoice"
		android:divider="@android:color/transparent"
		android:dividerHeight="0dp" />
</android.support.v4.widget.DrawerLayout>
